# aos-ce

./: .gitignore  CHANGELOG.md  Capsule.toml  Cargo.toml  MIGRATION.md  README.md  install.sh
.cargo/: config.toml
.github/workflows/: bootstrap-channels.yml  ci.yml  promote-channel.yml  release.yml
benchmarks/linux-realm/: 2026-07-24-m2-ultra-0ebf62d-sh3-prewarm.jsonl
capsules/capsule-agents/: Capsule.toml  Cargo.toml
capsules/capsule-agents/src/: lib.rs
capsules/capsule-cli/: README.md
capsules/capsule-context-engine/: Cargo.toml  README.md
capsules/capsule-forge/.cargo/: config.toml
capsules/capsule-forge/src/: checks.rs  lib.rs  meta_harness_quickstart.md
capsules/capsule-forge/src/skills/capsule-forge/: SKILL.md
capsules/capsule-fs/: Capsule.toml  README.md
capsules/capsule-hook-bridge/: Capsule.toml  README.md
capsules/capsule-hook-bridge/src/: lib.rs
capsules/capsule-http/: README.md
capsules/capsule-identity/: Cargo.toml  README.md
capsules/capsule-linux-realm/: .gitignore  Capsule.toml  Cargo.toml  README.md
capsules/capsule-linux-realm/.cargo/: config.toml
capsules/capsule-linux-realm/assets/: linux-kernel.img  linux-vcpu.wasm
capsules/capsule-linux-realm/crates/realm-9p/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-abi/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-abi/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-core/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-core/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-machine/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-machine/examples/: benchmark_linux.rs  boot_linux.rs  build_bootstrap.rs  (+1 more)
capsules/capsule-linux-realm/crates/realm-runtime/: Cargo.toml  build.rs
capsules/capsule-linux-realm/crates/realm-runtime/src/: lib.rs  pipeline.rs
capsules/capsule-linux-realm/crates/realm-vcpu-worker/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-vcpu-worker/.cargo/: config.toml
capsules/capsule-linux-realm/crates/realm-vcpu-worker/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-vfs/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-vfs/src/: lib.rs
capsules/capsule-linux-realm/guests/: catalog.tsv
capsules/capsule-linux-realm/guests/cat/: cat.wat
capsules/capsule-linux-realm/guests/echo/: echo.wat
capsules/capsule-linux-realm/guests/guest-pipeline/: guest-pipeline.wat
capsules/capsule-linux-realm/guests/mini-shell/: mini-shell.wat
capsules/capsule-linux-realm/guests/pwd/: pwd.wat
capsules/capsule-linux-realm/guests/smoke-write/: smoke-write.wat
capsules/capsule-linux-realm/guests/stdin-cat/: stdin-cat.wat
capsules/capsule-linux-realm/guests/write-file/: write-file.wat
capsules/capsule-linux-realm/linux/: Image  README.md  assemble-userland.sh  build-bootstrap.sh  build-image.sh  build-userland.sh  init.S  rootfs.cpio
capsules/capsule-linux-realm/linux/buildroot/: Config.in  external.desc  external.mk
capsules/capsule-linux-realm/linux/kernel/: aos_system.c  drivers-block-aos.patch
capsules/capsule-linux-realm/linux/legal-info/: .gitattributes  BUILDROOT-README  README.md  buildroot.config  manifest.csv
capsules/capsule-linux-realm/scripts/: build-vcpu-worker.sh
capsules/capsule-linux-realm/src/: actor.rs  backend.rs  host.rs  lib.rs  paths.rs  resources.rs
capsules/capsule-memory/: Capsule.toml  README.md
capsules/capsule-memory/src/: lib.rs
capsules/capsule-meta-harness/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-meta-harness/src/: lib.rs
capsules/capsule-openai/: README.md
capsules/capsule-openai-compat/: README.md
capsules/capsule-prompt-builder/: README.md
capsules/capsule-prompt-builder/src/: lib.rs
capsules/capsule-react/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-react/src/: lib.rs
capsules/capsule-registry/: README.md
capsules/capsule-router/: README.md
capsules/capsule-session/: README.md
capsules/capsule-shell/: README.md
capsules/capsule-skills/: README.md
capsules/capsule-skills/src/: lib.rs
capsules/capsule-system/: README.md
capsules/capsule-telegram/: README.md
capsules/capsule-trace/: Capsule.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
capsules/capsule-trace/.github/workflows/: release.yml
capsules/capsule-trace/src/: lib.rs  time.rs
capsules/capsule-users/: Cargo.toml  README.md
capsules/capsule-users/src/: lib.rs  types.rs
crates/unicity-aos-bootstrap/: Cargo.toml
crates/unicity-aos-bootstrap/src/: hook.rs  lib.rs  main.rs  migration.rs  status.rs
crates/unicity-aos-bootstrap/src/mcp/: interaction.rs
crates/unicity-aos-bootstrap/tests/: cli_boundary.rs
distros/community/aos-ce/: Distro.toml  README.md
distros/community/astralis/: Distro.toml  README.md
distros/community/unicity-ce/: Distro.toml  README.md
docs/: meta-harness.md  principal-linux-realm.md  release-channels.md  runtime-migration.md
release/: community-capsules.txt  runtime-compatibility.toml
scripts/: astrid-094-frozen-shape.json  benchmark-linux-realm.py  build-capsule-assets.sh  capsule_release.py  channel_transaction.py  create-astrid-094-fixture.py  extract-runtime-tool.sh  package-release.sh  release_metadata.py  test-channel-workflow-contract.sh  test-clean-home-init.sh  test-clean-home-musl-install.sh  test-extract-runtime-tool.sh  test-final-runtime-boot-harness.sh  test-final-runtime-boot.sh  test-install.sh  test-package-release.sh  test-upgrade-self-heal.sh  test_benchmark_linux_realm.py  test_capsule_release.py  test_channel_transaction.py  test_check_glibc.py  test_create_astrid_094_fixture.py  test_musl_workflow_contract.py  test_nightly_version.py  test_release_metadata.py  test_release_publication.py  test_validate_release_contract.py  test_validate_runtime_archive.py  validate-release-contract.py  validate-runtime-archive.py  validate_capsule_skills.py
src/: checks.rs  lib.rs  platform_scenarios.rs  quickstart.md  requests.rs  responses.rs  scaffold.rs  schemas.rs  store.rs  store_tests.rs  strategy.rs  tests.rs  time.rs  types.rs
src/skills/capsule-forge/: SKILL.md
(+16 files in other folders)
