[package]
name = "astrid-capsule-users"
version = "0.1.0"
edition = "2024"
description = "Within-principal user identity store for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.6.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
astrid-sdk = { path = "/Users/joshuaj.bouw/dev/astrid.worktrees/agent2/sdk-rust/astrid-sdk" }
astrid-sdk-macros = { path = "/Users/joshuaj.bouw/dev/astrid.worktrees/agent2/sdk-rust/astrid-sdk-macros" }
astrid-sys = { path = "/Users/joshuaj.bouw/dev/astrid.worktrees/agent2/sdk-rust/astrid-sys" }
