[package]
name = "astrid-capsule-forge"
version = "0.1.0"
edition = "2024"
description = "Capsule-authoring forge — tools and a Skill that teach a fresh LLM to build Astrid capsules"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# 0.7 resolves to 0.7.1+, which carries the tool_describe publish fix —
# a return-only describe collects 0 tools, so the floor matters.
astrid-sdk = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
