[package]
name = "aos-trace"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Durable trace and evaluation archive capsule for Unicity AOS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
