[package]
name = "aos-realm-core"
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-aos/aos-ce"
description = "Process, descriptor, and bounded-pipe state machine for AOS Realm"
publish = false

[dependencies]
aos-realm-abi = { workspace = true }
