[package]
name = "aos-realm-vcpu-worker"
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-aos/aos-ce"
description = "Core-Wasm RV64 vCPU worker for the AOS Linux Realm"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aos-realm-machine = { workspace = true }
aos-realm-vcpu-protocol = { workspace = true }

[dev-dependencies]
astrid-compute = { git = "https://github.com/astrid-runtime/astrid.git", rev = "0bbd8e389ef96d8b3447ce4f97b67c48523952b4" }
astrid-core = { git = "https://github.com/astrid-runtime/astrid.git", rev = "0bbd8e389ef96d8b3447ce4f97b67c48523952b4" }
