[package]
name = "aos-realm-vfs"
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-aos/aos-ce"
description = "Versioned content-addressed filesystem metadata for AOS Realm"
publish = false

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
